@@ -1,3 +1,10 @@
+2020-10-31  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
+
+	* pdfximage.c: Fix a bug that mps images are not reused when
+	they are included multiple times. Bug introduced by "Forward
+	reference" support added on 2020-07-21.
+	* configure.ac: Version 20201031.
+
 2020-10-28  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
 	* cidtype0.c: Fix a bug that the conditional for deciding if
